# daily_tasks_bot

./: .env_example  .env_examples  .gitignore  compose.yaml  config.py  main.py  pyproject.toml  requirements.txt  run.sh
bot/: base.py  controls.py  create_bot.py  database_middleware.py  main.py  middleware.py  service.py  utils.py
bot/daily_tasks/: keyboards.py  routers.py  schemas.py
bot/daily_tasks/new_tasks_creation/: dialogs.py  getters.py  handlers.py  states.py  windows.py
bot/daily_tasks/routers/: multiptle_tasks.py  single_task.py
bot/daily_tasks/task_progress/: dialogs.py  handlers.py  states.py  windows.py
bot/daily_tasks_dialogs/: dialog.py  dialogs.py  getters.py  handlers.py  routers.py  schemas.py  states.py  windows.py
bot/notifier_settings/: handlers.py  keyboard.py  routers.py  states.py  utils.py
bot/users/: keyboards.py  router.py  routers.py  schemas.py
daily_task/: dao.py  models.py  service.py
db/: dao.py  database.py  init_db.py  models.py  schemas.py  session.py
db/tests/: conftest.py  test_dao.py
migration/: env.py
migration/versions/: 70acc21ab47c_init.py  918d7af4e5de_init.py  944a50460ef6_notifier_settings_moved_to_separate_.py  a29bc9c5f875_delay_task_minutes_setting_add.py  e69e4116ae3e_users_altering_id_removing_language_code.py
notifier/: base.py  dao.py  events.py  jobs.py  models.py  schemas.py  service.py  tg_notifier.py
scheduler/: base.py  jobs.py  schemas.py  service.py
tests/: conftest.py  test_dao.py
user/: dao.py  models.py  service.py
