[project]
name = "scheduling-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.6.2",
    "aiogram>=3.27.0",
    "aiogram-dialog>=2.6.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytz>=2026.1.post1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
